--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nemanja Nedeljković <nemanjan00@gmail.com> (https://nemanja.top/)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ws": "^1.1.1"
   }
